[FIX] Avoid long URLs overflow and wrap them into several lines instead (https://dev.tiki.org/item6063)

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -790,6 +790,9 @@ input[type="checkbox"].preffilter-toggle-round:checked + label:before {
   background-color: #fff;
   border-color: #212529; }
 
+a {
+  word-wrap: break-word; }
+
 .button.highlight {
   background: inherit; }
 
